# hpm

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  JenkinsFile  Jenkinsfile  Makefile  README.md
.github/workflows/: Android.yml  Linux.yml  Window.yml.disabled
cmake-modules/: DebSourcePPA.cmake
docs/: CMakeLists.txt  Doxyfile.in  Doxygen
include/: hpm.h  hpmdef.h  hpmentries.h  hpmlogic.h  hpmmath.h  hpmmatrix.h  hpmprint.h  hpmquaternion.h  hpmtypes.h  hpmutil.h  hpmvector.h
src/: all_sse_math.c  all_sse_matrix.c  all_sse_quaternion.c  all_sse_vector.c  allsimd_matrix.c  allsimd_quaternion.c  allsimd_vector.c  avx2_matrix.c  avx_math.c  avx_matrix.c  avx_quaternion.c  avx_vector.c  base_matrix.c  base_quat.c  base_vector.c  hpm.c  matrix.c  matrix_base.c  mmx_matrix.c  mmx_vector.c  neon_matrix.c  neon_quaternion.c  neon_vector.c  nosimd_math.c  nosimd_matrix.c  nosimd_quad.c  nosimd_quat.c  nosimd_vector.c  quad_base.c  quat_base.c  quaternion.c  sse3_vector.c  sse_matrix.c  sse_quaternion.c  sse_vector.c  utility.c  vector_base.c
src/avx/: avx_logic.c  avx_math.c  avx_matrix.c  avx_quaternion.c  avx_vector.c
src/base/: base_math.c  base_matrix.c  base_quat.c  base_vector.c
src/neon/: neon_logic.c  neon_math.c  neon_matrix.c  neon_quaternion.c  neon_vector.c
src/nosimd/: nosimd_logic.c  nosimd_math.c  nosimd_matrix.c  nosimd_quat.c  nosimd_vector.c
src/sse/: all_sse_logic.c  all_sse_math.c  all_sse_matrix.c  all_sse_quaternion.c  all_sse_vector.c
test/: CMakeLists.txt  example.c  hpmtest.h  main.c
test/glbunny/: Bunny.h  CMakeLists.txt  glbunny.c  glbunny.h  hpmglbunny.bc  main.c
test/glbunny/include/: Bunny.h  glbunny.h
test/glbunny/src/: debug.c  glbunny.c  main.c  renderer.c
test/hpmassert/: CMakeLists.txt  README.md  hpmassert.bc  hpmassert.c  hpmassert.h  main.c
test/hpmassert/include/: hpmassert.h  hpmlog.h  hpmparser.h
test/hpmassert/src/: equality.c  format.c  hpmassert.c  hpmlog.c  integrity.c  main.c  math.c  matrices.c  parser.c  quat.c  vector.c
test/hpmassert/src/assert/: equality.c  integrity.c  math.c  matrices.c  quat.c  vector.c
wrapper/hpmcharp/: Directory.Build.props
wrapper/hpmcharp/src/: hpmsharp.sln
wrapper/hpmcharp/src/HpmBinding/: Hpm.cs  HpmNative.cs  HpmSharp.HpmBinding.csproj
wrapper/hpmcharp/src/Visual/: HpmSharp.Visual.csproj  Program.cs
wrapper/hpmcharp/src/hpm/: Hpm.cs  HpmFlag.cs  HpmSharp.Hpm.csproj  MathUtil.cs  Matrix4x4.cs  Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
wrapper/hpmcharp/src/test/: HpmSharp.Test.csproj  UnitTest1.cs
wrapper/hpmlua/: .luacov  CMakeLists.txt  hpm.lua  hpm.rocketspec
wrapper/hpmlua/include/: common.h  def.h  hpm_lmath.h  matrix.h  quat.h  vector.h
wrapper/hpmlua/src/: common.c  init.c  math.c  matrix.c  quat.c  vector.c
wrapper/hpmlua/test/: math.lua
wrapper/jhpm/: CMakeLists.txt
wrapper/jhpm/jni/: CMakeLists.txt
wrapper/jhpm/jni/include/: org_jhpm_helper.h
wrapper/jhpm/jni/src/: HC.c  HCMatrix3x3.c  HCMatrix4x4.c  HCQuaternion.c  HCVector2.c  HCVector3.c  HCVector4.c  helper.c
wrapper/jhpm/src/org/jhpm/: Hpm.java  Matrix3x3.java  Matrix4x4.java  Quaternion.java  Vector2.java  Vector3.java  Vector4.java
